Optimize reading csv
Signed-off-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>
Signed-off-by: Slimane AMAR <slimane.amar_externe@rte-france.com>